--- a/app/src/main/res/menu/wordlists_activity_actions.xml
+++ b/app/src/main/res/menu/wordlists_activity_actions.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto" >
     
-<!--     <item android:id="@+id/action_share" -->
-<!--           android:title="@string/Export" -->
-<!--           app:showAsAction="ifRoom" -->
-<!--           app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/> -->
+    <item android:id="@+id/action_share"
+        android:title="@string/Export"
+           app:showAsAction="ifRoom"
+           app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
     
     <item android:id="@+id/action_search"
           android:icon="@drawable/ic_action_search"
