--- a/app/src/main/res/layout/dict_cc_words.xml
+++ b/app/src/main/res/layout/dict_cc_words.xml
@@ -19,6 +19,7 @@
 
         <Button
             android:id="@+id/add_word_record"
+            style="@android:style/Widget.Button.Inset"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
