--- a/app/src/main/res/layout/editwordlist.xml
+++ b/app/src/main/res/layout/editwordlist.xml
@@ -25,6 +25,7 @@
 
         <Button
             android:id="@+id/edit_list"
+            style="@android:style/Widget.Button.Inset"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -32,6 +33,7 @@
 
         <Button
             android:id="@+id/add_word_record"
+            style="@android:style/Widget.Button.Inset"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
