--- a/app/src/main/res/layout/word_list_row.xml
+++ b/app/src/main/res/layout/word_list_row.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-        <TextView
-            android:id="@+id/listId"
-            android:width="0dp"
-            android:visibility="invisible"/>
-        
-        <CheckBox
-            android:id="@+id/listSelected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/listName"
-            android:layout_width="wrap_content"
-            android:paddingRight="3dp"
-            android:layout_height="wrap_content"/>
-        
-       </TableRow>
-</TableLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+    <TextView
+        android:id="@+id/listId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/listName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:textColor="@android:color/white"
+        android:textSize="15sp" />
+
+    <CheckBox
+        android:id="@+id/listSelected"
+        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:focusable="false" />
+</LinearLayout>
