--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
    <color name="PaleVioletRed4">#8B475D</color>
    <color name="lightgreen">#00a000</color>
    <color name="WhiteSmoke">#f5f5f5</color>
+   <color name="colorPrimary">#3F51B5</color>
+   <color name="colorPrimaryDark">#303F9F</color>
+   <color name="colorAccent">#FF4081</color>
 </resources>
