--- a/app/src/main/res/layout/word_list_row.xml
+++ b/app/src/main/res/layout/word_list_row.xml
@@ -22,8 +22,6 @@
 
     <CheckBox
         android:id="@+id/listSelected"
-        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
