--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="rectangle">
-	<gradient android:startColor="#f0d000" android:endColor="#f0d000"
-		android:angle="45" />
-	<corners android:radius="5dp" />
-	<stroke android:width="1dp" android:color="#ffffffff"
-		android:dashWidth="1dp" android:dashGap="1dp" />
-
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <!-- background -->
+            <gradient android:angle="45" android:endColor="#f0d000" android:startColor="#f0d000" />
+            <corners android:radius="1dp" />
+            <stroke android:width="1dp" android:color="#ffffffff" android:dashGap="1dp" android:dashWidth="1dp" />
+        </shape>
+    </item>
+</selector>
