--- a/app/src/main/res/drawable/rectangle_border.xml
+++ b/app/src/main/res/drawable/rectangle_border.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="rectangle">
-	<gradient android:startColor="#f0d000" android:endColor="#f0d000"	android:angle="0" />
-	<corners android:radius="5dp" />
-	<stroke android:width="1dp" android:color="#000000" />
+    android:shape="rectangle">
+    <gradient
+        android:angle="0"
+        android:endColor="#f0d000"
+        android:startColor="#f0d000" />
+    <corners android:radius="5dp" />
+    <stroke
+        android:width="3dp"
+        android:color="#000000" />
 </shape>
