--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,10 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlNormal">@color/colorPrimary</item>
         <item name="colorControlActivated">@color/colorAccent</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>"
+        <item name="android:textAllCaps">false</item>
+
+
     </style>
 
 </resources>
