--- a/app/src/main/res/layout/editwordrecord.xml
+++ b/app/src/main/res/layout/editwordrecord.xml
@@ -25,17 +25,13 @@
                 android:id="@+id/trans_word_lang1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingBottom="20dp"
-                android:spinnerMode="dialog" />
+                android:layout_weight="1"/>
 
             <Spinner
                 android:id="@+id/trans_word_lang2"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingBottom="20dp"
-                android:spinnerMode="dialog" />
+                android:layout_weight="1"/>
         </LinearLayout>
 
     </RelativeLayout>
